test/library/standard/BigInteger/exponentiation.good
1 -1 1 
1 1 1 
9765625 48828125 244140625 1220703125 6103515625 
60466176 362797056 2176782336 13060694016 78364164096 
282475249 1977326743 13841287201 96889010407 678223072849 
1073741824 8589934592 68719476736 549755813888 4398046511104 
3486784401 31381059609 282429536481 2541865828329 22876792454961 
9765625 48828125 244140625 1220703125 6103515625 
60466176 362797056 2176782336 13060694016 78364164096 
282475249 1977326743 13841287201 96889010407 678223072849 
1073741824 8589934592 68719476736 549755813888 4398046511104 
3486784401 31381059609 282429536481 2541865828329 22876792454961 
exponentiation.chpl:43: error: halt reached - Exponent too large to compute result.
